fix(097): resuelve 9 hallazgos reales del Quality Gate de SonarQube
El CI fallaba con un estado genérico 'error' que inicialmente se atribuyó
a flake de infra (patrón ya visto en el repo, primer re-trigger fue
incorrecto) -- la causa real era el Quality Gate de galgoth-studio-backend,
verificado en vivo desde su dashboard: 9 issues nuevas.

- Literales de string duplicados (torso/right/_forearm/_hand/_shin)
  extraídos a constantes + helper sideName() -- beneficio real más allá
  de estilo: un typo en alguna repetición habría producido un boneId que
  no matchea ningún bone.
- int*int asignado a double sin cast explícito (sign * 2) -- resuelto
  extrayendo la constante HIP_X como double, no con un cast que solo
  silencia el warning.
- Math.max(min, Math.min(max, value)) -> Math.clamp (Java 21+).
- Falso positivo de detección de TODO: comentario en español que
  empezaba con 'Todo cuboid...' coincidía con el patrón TODO en inglés.

Suite completa re-corrida tras los fixes: 500/500 en verde.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01L9RUwC61XLdr8yAJewh4KW